--- a/CSS/ini.css
+++ b/CSS/ini.css
@@ -1,9 +1,10 @@
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin:0; padding:0; } 
 body, button, input, select, textarea {
     
-    font-family: 'Inter', sans-serif;
-    font-family: 'Poppins', sans-serif;
-    font:12px/1.5tahoma, arial, \5b8b\4f53; 
+    font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",
+                 "Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji",
+                 "Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  
 
 } 
 h1, h2, h3, h4, h5, h6{ font-size:100%; } 
