--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,5 +1,8 @@
 .footer{
-    width: 100%;
-position: absolute;
-bottom: 0
+    min-width: 100%;
+   margin-top: auto;
+    padding: 48px 0px;
+    position: absolute;
+    bottom: 0;
+    background-color: white;
 }
