--- a/CSS/ini.css
+++ b/CSS/ini.css
@@ -1,5 +1,8 @@
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin:0; padding:0; } 
 body, button, input, select, textarea {
+
+ 
+    background-color: #f8f9fa;
     
     font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",
                  "Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji",
